--- a/index.html
+++ b/index.html
@@ -3,10 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>To do list</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="main">
+        <div id="title">
+            <h2>To do list</h2>
+        </div>
+        <div id="list">
+            <div id="input-box">
+                <input id="task-input" type="text">
+                <button id="add-btn">Add task</button>
+            </div>
+            <div id="list-box">
+                <ol>
+                    <li></li>
+                </ol>
+            </div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
