--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To do list</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Happy+Monkey&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="main">
         <div id="title">
-            <h2>To do list</h2>
+            <h2>TO DO LIST</h2>
         </div>
         <div id="list">
             <div id="input-box">
@@ -18,7 +21,7 @@
             </div>
             <div id="list-box">
                 <ol>
-                    <li></li>
+                    <li>Uczyć się przez 2h <button>X</button></li>
                 </ol>
             </div>
         </div>
