--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </div>
             <div id="list-box">
                 <ol id="task-list">
-                    <li>Uczyć się przez 2h <button class="delete-btn" onclick="deleteTask()">DELETE TASK</button></li>
-                    <li>Dodać skryptowanie <button class="delete-btn" onclick="deleteTask()">DELETE TASK</button></li>
+                    <li>Uczyć się przez 2h <button class="delete-btn">DELETE TASK</button></li>
+                    <li>Dodać skryptowanie <button class="delete-btn">DELETE TASK</button></li>
                 </ol>
             </div>
         </div>
